--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.+'
     compile 'com.android.support:design:24.2.0'
     compile ('com.andreabaccega:android-form-edittext:1.3.+')
+    compile 'com.github.githubwing:ByeBurger:1.2.3'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.zcw:togglebutton-library:1.0.0'
     testCompile 'junit:junit:4.12'
 }
