--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dn.accounting">
+          package="com.example.dn.accounting">
 
     <application
         android:allowBackup="true"
@@ -8,24 +8,33 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MaterialAnimations">
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".Activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.AddAccountActivity" />
-        <activity android:name=".Activity.Main2Activity" />
-        <activity android:name=".Activity.StatisticsActivity" />
-        <activity android:name=".Activity.AlarmActivity" />
-        <activity android:name=".Activity.addAlarmInformation"></activity>
+        <activity android:name=".Activity.AddAccountActivity"/>
+        <activity android:name=".Activity.Main2Activity">
+        </activity>
+        <activity android:name=".Activity.StatisticsActivity"/>
+        <activity android:name=".Activity.AlarmActivity"/>
+        <activity android:name=".Activity.addAlarmInformation"/>
+
         <service android:name=".Service.AlarmService"/>
+
         <receiver android:name=".Receiver.AlarmReceiver">
             <intent-filter>
                 <action android:name="com.example.dn.alarm"/>
             </intent-filter>
         </receiver>
+
+        <activity android:name=".Activity.AddCostActivity">
+        </activity>
+        <activity android:name=".Activity.SettingActivity">
+        </activity>
     </application>
 
 </manifest>
