--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 24
@@ -29,6 +30,11 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.github.githubwing:ByeBurger:1.2.3'
     compile 'com.android.support:design:24.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.0'
     compile 'com.zcw:togglebutton-library:1.0.0'
     testCompile 'junit:junit:4.12'
 }
